--- a/budgeting_scenarioadvice/pages/ManipulationCheck.html
+++ b/budgeting_scenarioadvice/pages/ManipulationCheck.html
@@ -5,8 +5,8 @@
 {{ block content }}
 
 <div class="card mb-4">
-    <div class="card-header">
-        <strong>Please answer the following questions</strong>
+    <div class="card-header bg-secondary text-white">
+        <h5 class="mb-0">Please answer the following questions</h5>
     </div>
     <div class="card-body">
         <p>To help us understand your experience, please answer these questions about the study conditions:</p>
