--- a/budgeting_scenarioadvice/pages/Demographics.html
+++ b/budgeting_scenarioadvice/pages/Demographics.html
@@ -5,24 +5,26 @@
 {{ block content }}
 
 <div class="card mb-4">
-    <div class="card-header">
-        <strong>Demographics</strong>
+    <div class="card-header bg-info text-white">
+        <h5 class="mb-0">Demographics</h5>
     </div>
     <div class="card-body">
         <p>Finally, please tell us a bit about yourself.</p>
         
-        <div class="mb-3">
-            {{ formfield 'age' }}
-        </div>
-        <div class="mb-3">
-            {{ formfield 'gender' }}
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ formfield 'age' }}
+            </div>
+            <div class="col-md-6 mb-3">
+                {{ formfield 'gender' }}
+            </div>
         </div>
     </div>
 </div>
 
 <div class="card mb-4">
-    <div class="card-header">
-        <strong>Experience</strong>
+    <div class="card-header bg-secondary text-white">
+        <h5 class="mb-0">Experience</h5>
     </div>
     <div class="card-body">
         <div class="mb-3">
