--- a/spec_design2/Controls.html
+++ b/spec_design2/Controls.html
@@ -268,7 +268,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">6</span>
-                If you are reading this question carefully, please select "Agree".
+                If you are reading this question carefully, please <b>select "Agree"</b>.
             </p>
             <div class="likert-scale">
                 <div class="scale-option">
