--- a/spec_design2/Mediators.html
+++ b/spec_design2/Mediators.html
@@ -103,8 +103,8 @@
 
 <div class="controls-container">
     <div class="mb-4">
-        <h4>About the Information Design</h4>
-        <p class="text-muted">Please indicate your level of agreement with the following statements about the design of the information you received.</p>
+        <h4>About the What-if Scenario</h4>
+        <p class="text-muted">Please indicate your level of agreement with the following statements about the what-if scenario.</p>
     </div>
 
     <!-- Section: Risk Embodiment -->
@@ -114,7 +114,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">1</span>
-                The information made the risks feel concrete.
+                The what-if scenario <b>augmented my creativity</b> to identify risks.
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
@@ -138,7 +138,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">2</span>
-                The information made the risks feel tangible.
+                The what-if scenario made the risks of the product innovation <b>more accessible</b>.
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
@@ -162,7 +162,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">3</span>
-                The information allowed me to experience what the risks might be like.
+                The what-if scenario made the risks of the new product innovation <b>more tangible</b>.
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
@@ -186,7 +186,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">4</span>
-                To show you are reading carefully, please select "Agree" for this item.
+                To show you are reading carefully, please <b>select "Agree"</b> for this item.
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
