study content updates

--- a/budgeting/pages/ConstrualLevel.html
+++ b/budgeting/pages/ConstrualLevel.html
@@ -10,7 +10,7 @@
         
         {% if construal_level == 'concrete' %}
             <div class="alert alert-primary">
-                <strong>Please describe <u>how</u> budget planning for a public expense account is done.</strong>
+                <strong>Please describe <u>how</u> the expense account should be budgeted.</strong>
             </div>
             <p class="card-text">
                 <em>Consider the specific steps, processes, and methods you would use to make budget decisions.</em>
@@ -18,7 +18,7 @@
 
         {% elif construal_level == 'abstract' %}
             <div class="alert alert-primary">
-                <strong>Please describe <u>why</u> budget planning for a public expense account is done.</strong>
+                <strong>Please describe <u>why</u> the expense account should be budgeted.</strong>
             </div>
             <p class="card-text">
                 <em>Consider the broader goals, purposes, and motivations behind accurate budget forecasting.</em>
