--- a/spec_design2/Manip_Check.html
+++ b/spec_design2/Manip_Check.html
@@ -105,16 +105,16 @@
     <div class="question-box">
         <p class="mb-3">
             <span class="question-number">2</span>
-           Before you identified the risks, which of the following describes your task to reflect on the AI Shield product development?
+           In both tasks you had to reflect on the scenario. <b>Which of the following better describes the task you performed</b> in both parts of this study?
         </p>
         <div class="radio-group">
             <label class="radio-option">
                 <input type="radio" name="construal_check" value="Concrete Construal" required>
-                <span>I described<b>&nbsp;how&nbsp;</b>the SecureHorizon team is developing the product (the specific steps and procedures)</span>
+                <span><b>I described&nbsp;HOW&nbsp;</b>the expense account should be budgeted (Study 1) and how the SecureHorizon team is developing the product (the specific steps and procedures)</span>
             </label>
             <label class="radio-option">
                 <input type="radio" name="construal_check" value="Abstract Construal">
-                <span>I described<b>&nbsp;why&nbsp;</b>the SecureHorizon team is developing the product (the goals and purposes)</span>
+                <span><b>I described&nbsp;WHY&nbsp;</b>the expense account should be budgeted (Study 1) and why the SecureHorizon team is developing the product (the goals and purposes)</span>
             </label>
         </div>
         {{ formfield_errors 'construal_check' }}
