--- a/budgeting/pages/ManipulationCheck.html
+++ b/budgeting/pages/ManipulationCheck.html
@@ -6,14 +6,10 @@
 
 <div class="card mb-4">
     <div class="card-header">
-        <strong>Please answer the following questions</strong>
+        <strong>Please answer the following question</strong>
     </div>
     <div class="card-body">
-        <p>To help us understand your experience, please answer these questions about the study conditions:</p>
-        
-        <div class="mb-4">
-            {{ formfield 'manip_check_construal' }}
-        </div>
+        <p>To help us understand your experience, please answer this question about the study:</p>
         
         <div class="mb-4">
             {{ formfield 'manip_check_advice' }}
