db updates + varia

--- a/budgeting/pages/Instructions.html
+++ b/budgeting/pages/Instructions.html
@@ -17,7 +17,7 @@
         </ul>
         
         <div class="alert alert-success mt-3">
-            <strong>💰 Bonus Prize:</strong> The <b>participant with the highest quality justification</b> will receive an additional cash prize of <b>CHF 50</b>. Please provide thoughtful and detailed explanations for your budget decisions.
+            <strong>💰 Bonus Prize:</strong> The <b>participant with the highest quality response</b> (based on both the budget accuracy and the justifications) will receive an additional <b>cash prize of CHF 50</b>.
         </div>
     </div>
 </div>
