--- a/spec_design2/Assessment.html
+++ b/spec_design2/Assessment.html
@@ -113,7 +113,7 @@
     <div style="background-color: #d4edda; border-left: 4px solid #28a745; padding: 15px; border-radius: 0 8px 8px 0; margin: 20px 0;">
         <p style="margin: 0; color: #155724;">
         <p style="margin: 0px 0 0 0; color: #155724;">
-            <b>💰 Bonus Prize:</b> The participant who submits the <b>highest quality risk assessment</b> will receive 
+            <b>💰 Bonus Prize:</b> The participant who submits the <b>highest quality response</b> will receive 
             an additional <b>CHF 50 cash prize</b>. Please provide clear and well-reasoned descriptions for each risk!
         </p>
     </div>
