--- a/spec_design2/CLT_Condition.html
+++ b/spec_design2/CLT_Condition.html
@@ -57,9 +57,9 @@
 <div class="construal-container">
     <div class="text-center">
         {% if construal_level == 'Concrete Construal' %}
-            <div class="construal-icon">🔧</div>
+            <div class="construal-icon">💭</div>
         {% else %}
-            <div class="construal-icon">🔧</div>
+            <div class="construal-icon">💭</div>
         {% endif %}
     </div>
 
@@ -69,7 +69,7 @@
         
         {% if construal_level == 'Concrete Construal' %}
             <div class="question-prompt">
-                Please think of and describe <b><u>how</u></b> the project team is developing the new AI risk insurance product 🔧
+                Please think of and describe <b><u>how</u></b> the project team is developing the new AI risk insurance product 
             </div>
             <p class="mt-3">
                 <em>Consider the specific steps, processes, and methods involved in bringing this insurance product to market.</em>
@@ -77,7 +77,7 @@
 
         {% elif construal_level == 'Abstract Construal' %}
             <div class="question-prompt">
-                Please think of and describe <b><u>why</u></b> the project team is developing the new AI risk insurance product 💡
+                Please think of and describe <b><u>why</u></b> the project team is developing the new AI risk insurance product 
             </div>
             <p class="mt-3">
                 <em>Consider the broader goals, purposes, and motivations behind this product development.</em>
