--- a/spec_design2/Introduction.html
+++ b/spec_design2/Introduction.html
@@ -133,7 +133,7 @@
     <div class="compensation-box">
         <h5 style="color: #28a745; margin-bottom: 15px;">🎁 Incentive</h5>
         <p style="margin-top: 10px;">
-            <b>Bonus Prize:</b> The participant who submits the <b>highest quality risk assessment</b> 
+            <b>Bonus Prize:</b> The participant who submits the <b>highest quality response</b> 
             (based on both the number and relevance of risks identified) will receive an additional 
             <b>CHF 50 cash prize</b>. Please provide clear and well-reasoned descriptions for each risk you identify.
         </p>
