--- a/spec_design2/Manip_Check.html
+++ b/spec_design2/Manip_Check.html
@@ -90,15 +90,15 @@
         </p>
         <div class="radio-group">
             <label class="radio-option">
-                <input type="radio" name="video_check" value="Speculative Design Absent" required>
+                <input type="radio" name="specdesign_check" value="Speculative Design Absent" required>
                 <b>No</b>, the speculative "What If" scenario&nbsp; <b>did not contain images</b> 
             </label>
             <label class="radio-option">
-                <input type="radio" name="video_check" value="Speculative Design Present">
+                <input type="radio" name="specdesign_check" value="Speculative Design Present">
                 <b>Yes</b>, the speculative "What If" scenario&nbsp;<b>contained images</b> 
             </label>
         </div>
-        {{ formfield_errors 'video_check' }}
+        {{ formfield_errors 'specdesign_check' }}
     </div>
 
     <!-- Construal Level Check -->
