--- a/spec_design2/Consent.html
+++ b/spec_design2/Consent.html
@@ -89,8 +89,8 @@
     </div>
 
     <ul class="consent-list">
-        <li>In this study, you will participate in a budget forecasting task which will take approximately 10-15 minutes to complete.</li>
-        <li>You will be asked to make budget forecasting decisions and explain your reasoning.</li>
+        <li>In this study, you will participate in a risk identification task which will take approximately 10-15 minutes to complete.</li>
+        <li>You will be asked to identify potential risks for a new product and explain your reasoning.</li>
         <li>There is no psychological discomfort, no physical discomfort, nor any deception in this study.</li>
         <li>Your decisions and answers will only be used in anonymous form. We will not store any personally identifying information.</li>
         <li>Your anonymized data will be used for academic purposes and may be shared with other academics for research purposes.</li>
