--- a/spec_design2/Background.html
+++ b/spec_design2/Background.html
@@ -88,7 +88,7 @@
     <div class="company-header">
         <div class="company-icon">🛡️</div>
         <h3>Case Instructions: SecureHorizon Insurance</h3>
-        <p class="text-muted">AI Shield Product Innovation</p>
+        <p class="text-muted">AI Insurance Product Innovation</p>
     </div>
 
     <div class="tech-overview">
@@ -100,16 +100,15 @@
             in cybersecurity research, the need for comprehensive AI risk coverage has never been greater.
         </p>
         <p>
-            To address this challenge, SecureHorizon Insurance recently initiated a groundbreaking project called 
-            <b>AI Shield</b> and you have been assigned to identify potential risks during the 
-            preparation phase of this new insurance product line.
+            To address this challenge, SecureHorizon Insurance is developing a new <b>AI Insurance</b> product line,
+            and you have been assigned to identify potential risks during the preparation phase.
         </p>
     </div>
 
     <div class="features-list">
-        <h5>AI Shield: Comprehensive AI Risk Insurance</h5>
+        <h5>AI Insurance: Comprehensive AI Risk Coverage</h5>
         <p class="mb-3">
-            The AI Shield project aims to develop insurance products that provide coverage for businesses and individuals 
+            The AI Insurance product aims to provide coverage for businesses and individuals 
             in the event that AI or GenAI systems cause harm. The product line will include:
         </p>
         <div class="feature-item">
