--- a/spec_design2/CLT_Condition.html
+++ b/spec_design2/CLT_Condition.html
@@ -65,7 +65,7 @@
 
     <div class="instruction-box">
         <h4 class="mb-3">Reflection Task</h4>
-        <p class="lead">Please take a moment to reflect on the AI Shield insurance product.</p>
+        <p class="lead">Please take a moment to reflect on the new AI insurance product.</p>
         
         {% if construal_level == 'Concrete Construal' %}
             <div class="question-prompt">
