--- a/spec_design2/Consent.html
+++ b/spec_design2/Consent.html
@@ -90,7 +90,8 @@
 
     <ul class="consent-list">
         <li>In this study, you will participate in a risk identification task which will take approximately 10-15 minutes to complete.</li>
-        <li>You will be asked to identify potential risks for a new product and explain your reasoning.</li>
+        <li>The study starts with a knowledge check to ensure you understand the context of the scenario.</li>
+        <li>After reading the scenario, you will be asked to identify risks for a new product and explain your reasoning.</li>
         <li>There is no psychological discomfort, no physical discomfort, nor any deception in this study.</li>
         <li>Your decisions and answers will only be used in anonymous form. We will not store any personally identifying information.</li>
         <li>Your anonymized data will be used for academic purposes and may be shared with other academics for research purposes.</li>
