--- a/spec_design2/Spec_Condition.html
+++ b/spec_design2/Spec_Condition.html
@@ -105,6 +105,7 @@
     <div class="header-section">
         <div class="reflection-icon">⚠️</div>
         <h4>What-if Scenario</h4>
+        <p class="text-muted">Please review the following what-if scenario, which was developed to help assess potential risks for SecureHorizon's new AI Insurance product.</p>
     </div>
 
     {% if speculative_design == 'Speculative Design Present' %}
